gcc/testsuite/rust/rustc/ui/lifetimes/issue-97193.rs
extern "C" {
    fn a(&mut self) {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
        fn b(buf: &Self) {}
    }
}

fn main() {}

